righr part&background

--- a/index.html
+++ b/index.html
@@ -6,12 +6,10 @@
     <title>Orar USARB</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
-    <div class="container">
+    <class class="container">
         <!-- Левая часть -->
         <div class="left-side">
             <h1>ORAR</h1>
-
             <!-- Кнопки с выпадающими списками -->
             <div class="dropdown-group">
                 <label for="groups">Grupe:</label>
@@ -140,5 +138,68 @@
                 <p>SP - Seminar prealabil ST - Seminar de totalizare</p>
             </div>
         </div>
+        <div class="right-side">
+
+            <!-- Логотип -->
+            <div class="logo">
+                <img src="logo_usarb.png">
+            </div>
+        
+            <!-- Заголовок -->
+            <h2 class="university-title">UNIVERSITATEA DE STAT „ALECU RUSSO” DIN BĂLȚI</h2>
+        
+            <!-- Таблица расписания -->
+            <div class="schedule">
+                <div class="row">
+                    <div class="time">8:00-9:30</div>
+                    <div class="subject">
+                        Teoria numerelor<br>
+                        <b>Prelegeri</b><br>
+                        conf. univ., dr. Zastînceanu L.<br>
+                        aud. 236
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="time">9:45-11:15</div>
+                    <div class="subject">
+                        Teoria numerelor<br>
+                        <b>Prelegeri</b><br>
+                        conf. univ., dr. Zastînceanu L.<br>
+                        aud. 236
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="time">11:30-13:00</div>
+                    <div class="subject">
+                        Teoria numerelor<br>
+                        <b>Seminar</b><br>
+                        asist. univ. Rotari T. V.<br>
+                        aud. 234
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="time">13:15-14:45</div>
+                    <div class="subject">
+                        Proiectarea paginilor WEB<br>
+                        <b>Laborator</b><br>
+                        asist. univ. Chilat S.<br>
+                        aud. 141a
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="time">15:00-16:30</div>
+                    <div class="subject"></div>
+                </div>
+                <div class="row">
+                    <div class="time">16:45-18:15</div>
+                    <div class="subject"></div>
+                </div>
+                <div class="row">
+                    <div class="time">18:30-20:00</div>
+                    <div class="subject"></div>
+                </div>
+            </div>
+        </div>        
+    </class>
 </body>
 </html>
