--- a/index.html
+++ b/index.html
@@ -10,47 +10,19 @@
         <!-- Левая часть -->
         <div class="left-side">
             <h1>ORAR</h1>
-            <!-- Кнопки с выпадающими списками -->
-            <div class="dropdown-group">
-                <label for="groups">Grupe:</label>
-                <select id="groups">
-                    <option value="MI21Z">MI21Z</option>
-                    <option value="IT21Z">IT21Z</option>
-                    <option value="IS21Z">IS21Z</option>
-                    <option value="MI11Z">MI11Z</option>
-                    <option value="IT11Z">IT11Z</option>
-                    <option value="IS11Z">IS11Z</option>
-                </select>
-            </div>
+        <!-- Линия с кнопками -->
+        <div class="button-row">
+            <button class="dropdown-btn" id="groups-btn">Grupe</button>
+            <button class="dropdown-btn" id="teachers-btn">Profesori</button>
+            <button class="dropdown-btn" id="rooms-btn">Aule</button>
+        </div>
 
-            <div class="dropdown-group">
-                <label for="teachers">Profesori:</label>
-                <select id="teachers">
-                    <option value="Chilat Sergiu">Chilat Sergiu</option>
-                    <option value="Gorea Adela">Gorea Adela</option>
-                    <option value="Ticau Vitalie">Ticau Vitalie</option>
-                    <option value="Popov Lidia">Popov Lidia</option>
-                </select>
-            </div>
-
-            <div class="dropdown-group">
-                <label for="rooms">Aule:</label>
-                <select id="rooms">
-                    <!-- Кабинеты с 100 по 160 -->
-                    <option value="100">100</option>
-                    <option value="101">101</option>
-                    <option value="102">102</option>
-                    <option value="103">103</option>
-                    <option value="104">103</option>
-                    <option value="105">103</option>
-                    <option value="106">103</option>
-                    <option value="107">103</option>
-                    <option value="108">103</option>
-                    <option value="109">103</option>
-                    <option value="110">103</option>
-                </select>
-            </div>
-
+        <!-- Строка поиска -->
+        <div class="search-bar">
+            <img src="search1.png">
+            <input type="text" placeholder="Căutați aici..." id="search-input">
+            <button class="clear-btn">✖</button>
+        </div>
             <div class="dropdown-group">
                 <select id="days">
                     <option value="Luni">Luni</option>
@@ -104,23 +76,53 @@
                 </tr>
                 <tr>
                     <th>L-25</th>
-                    <td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+                    <td class="coffe-cell">P</td>
+                    <td class="green-cell">S</td>
+                    <td class="blue-cell">S</td>
+                    <td class="violet-cell">P</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
                 </tr>
                 <tr>
                     <th>M-26</th>
-                    <td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+                    <td class="bej-cell">P</td>
+                    <td class="blue-cell">S</td>
+                    <td class="pink-cell">L</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
                 </tr>
                 <tr>
                     <th>Mi-27</th>
-                    <td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+                    <td class="coffe-cell">P</td>
+                    <td class="coffe-cell">P</td>
+                    <td class="green-cell">S</td>
+                    <td class="sky-cell">L</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
                 </tr>
                 <tr>
                     <th>J-28</th>
-                    <td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+                    <td class="salad-cell">P</td>
+                    <td class="salad-cell">P</td>
+                    <td class="green-cell">S</td>
+                    <td class="green-cell">S</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
                 </tr>
                 <tr>
                     <th>V-29</th>
-                    <td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+                    <td></td>
+                    <td class="green-cell">S</td>
+                    <td class="sky-cell">L</td>
+                    <td class="green-cell">S</td>
+                    <td class="green-cell">S</td>
+                    <td></td>
+                    <td></td>
                 </tr>
                 <tr>
                     <th>S-30</th>
@@ -142,7 +144,7 @@
 
             <!-- Логотип -->
             <div class="logo">
-                <img src="logo_usarb.png">
+                <img src="logo.png">
             </div>
         
             <!-- Заголовок -->
